# ftm-analyze

./: .bumpversion.cfg  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.base  Makefile  README.md  VERSION  mkdocs.yml  pyproject.toml  requirements-dev.txt  requirements-openaleph.txt  requirements.txt
.github/: dependabot.yml
.github/workflows/: docker.yml  python.yml
docs/: annotate.md  docker.md  extraction.md  index.md  ner.md  pipeline.md
docs/reference/: cli.md  pipeline.md  settings.md
ftm_analyze/: __init__.py  annotate.py  cli.py  logic.py  settings.py  tasks.py
ftm_analyze/analysis/: aggregate.py  analyzer.py  country.py  extract.py  ft_type_model.py  language.py  patterns.py  refine.py  tmp.json  tracer.py  util.py
ftm_analyze/analysis/aggregate/: __init__.py  aggregator.py  confidence.py
ftm_analyze/analysis/emit/: __init__.py  entity_factory.py
ftm_analyze/analysis/extract/: __init__.py  base.py  bert.py  flair.py  gliner.py  patterns.py  spacy.py
ftm_analyze/analysis/resolve/: __init__.py  mention.py  pipeline.py
ftm_analyze/analysis/resolve/stages/: __init__.py  geonames.py  juditha.py  rigour.py
ftm_analyze/annotate/: annotator.py  symbols.py
tests/: conftest.py  test_analyze.py  test_annotate.py  test_patterns.py  test_refine_names.py
tests/fixtures/: documents.ftm.json  juditha.ftm.json
