[project]
name = "ftm-analyze"
version = "5.3.1-rc2"
description = "Analyze FollowTheMoney entities"
authors = [
    { name = "Friedrich Lindenberg", email = "friedrich@pudo.org" },
    { name = "OCCRP Data Team", email = "data@occrp.org" },
    { name = "Data and Research Center", email = "hi@dataresearchcenter.org" },
]
license = "AGPL-3.0-or-later"
classifiers = [
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
requires-python = ">=3.11,<3.15"
dependencies = [
    "anystore (>=1.2.5,<2.0.0)",
    "ftmq (>=4.10.0,<5.0.0)",
    "pydantic (>=2.11.7,<3.0.0)",
    "pydantic-settings (>=2.14.2,<3.0.0)",
    "countrytagger (>=0.1.2,<0.2.0)",
    "fasttext-numpy2 (>=0.10.4,<0.11.0)",
    "juditha (>=4.5.0,<5.0.0)",
    "rigour (>=2.1.2,<3.0.0)",
    "followthemoney (>=4.10.0,<5.0.0)",
    "schwifty (>=2026.7.1,<2027.0.0)",
    "cachetools (<6)",
    "geonames-tagger (>=1.1.0,<2.0.0)",
]

[project.optional-dependencies]
openaleph = ["openaleph-procrastinate (>=5.3.1,<6.0.0)"]
ner-flair = ["flair (>=0.15.1,<0.16.0)", "torch (>=2.9.0,<3.0.0)"]
ner-gliner = ["gliner (>=0.2,<1.0)", "torch (>=2.9.0,<3.0.0)"]
ner-spacy = ["spacy (>=3.8.13,!=3.8.14,<4.0.0)"]
ner-transformers = ["transformers (>=4.57.1,<5.0.0)", "torch (>=2.9.0,<3.0.0)"]
# nvidia/"gpu" flavor: switches torch to the CUDA build (the ner-flair, ner-gliner
# and ner-transformers extras default to the CPU-only build otherwise)
gpu = ["torch (>=2.9.0,<3.0.0)"]

[project.scripts]
ftm-analyze = "ftm_analyze.cli:cli"

[project.urls]
Homepage = "https://docs.investigraph.dev/lib/ftm-analyze"
Documentation = "https://docs.investigraph.dev/lib/ftm-analyze"
Repository = "https://github.com/dataresearchcenter/ftm-analyze"
Issues = "https://github.com/dataresearchcenter/ftm-analyze/issues"

# CPU-only torch by default: the regular PyPI linux wheels depend on the full
# nvidia/cuda stack; the +cpu builds only exist on pytorch's own index. Selecting
# the gpu extra flips torch (and its nvidia-* deps) back to the CUDA build from PyPI.
[[tool.poetry.source]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"

[tool.poetry.dependencies]
# "PyPI" must be capitalized exactly like this: poetry check validates the source
# name case-sensitively against the canonical repository name
torch = [
    { source = "pytorch-cpu", markers = "extra != 'gpu'" },
    { source = "PyPI", markers = "extra == 'gpu'" },
]

[tool.poetry.group.dev.dependencies]
pytest = "^9.1.1"
pytest-cov = ">=7.1.0,<8.0"
pytest-env = "^1.1.1"
black = ">=26.5.1,<27.0"
isort = "^8.0.1"
mypy = "^2.3.0"
pre-commit = "^4.0.1"
flake8 = ">=6.1,<8.0"
ipdb = "^0.13.13"
bump2version = "^1.0.1"
griffe-pydantic = "^1.1.6"
zensical = "^0.0.50"

[tool.poetry.requires-plugins]
poetry-plugin-export = ">=1.8"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest_env]
DEBUG = 1
FTM_ANALYZE_ANNOTATE = 1
